--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-/Users/rainsbp/Library/Application Support/Autodesk/Autodesk Fusion 360/API/AddIns/Fusion360AddinSkeleton/__pycache__/*
+__pycache__/
